--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
-  "name": "movie-search",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@heroicons/react": "^2.0.12",
-    "@reduxjs/toolkit": "^1.8.6",
-    "@testing-library/react": "^13.4.0",
-    "axios": "^1.1.3",
-    "chai": "^4.3.6",
-    "mocha-vite-puppeteer": "^2.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.4",
-    "wouter": "^2.8.0-alpha.2"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
-    "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.18",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.2.0",
-    "vite": "^3.1.0"
-  }
+	"name": "movie-search",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"test": "vitest --run",
+		"coverage": "vitest --coverage --run"
+	},
+	"dependencies": {
+		"@heroicons/react": "^2.0.12",
+		"@reduxjs/toolkit": "^1.8.6",
+		"@testing-library/react": "^13.4.0",
+		"axios": "^1.1.3",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-redux": "^8.0.4",
+		"wouter": "^2.8.0-alpha.2"
+	},
+	"devDependencies": {
+		"@types/react": "^18.0.17",
+		"@types/react-dom": "^18.0.6",
+		"@vitejs/plugin-react": "^2.1.0",
+		"@vitest/coverage-c8": "^0.24.3",
+		"autoprefixer": "^10.4.12",
+		"postcss": "^8.4.18",
+		"prettier": "^2.7.1",
+		"prettier-plugin-tailwindcss": "^0.1.13",
+		"tailwindcss": "^3.2.0",
+		"vite": "^3.1.0",
+		"vitest": "^0.24.3"
+	}
 }
